<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Android Taschenrechner</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_simple">Standard</string>
    <string name="menu_advanced">Advanced</string>
    <string name="menu_docu">Documentation</string>
    <string name="action_settings">Settings</string>
    <string name="button0">0</string>
    <string name="button1">1</string>
    <string name="button2">2</string>
    <string name="button3">3</string>
    <string name="button4">4</string>
    <string name="button5">5</string>
    <string name="button6">6</string>
    <string name="button7">7</string>
    <string name="button8">8</string>
    <string name="button9">9</string>
    <string name="buttonAdd">+</string>
    <string name="buttonSubtract">-</string>
    <string name="buttonMultiply">*</string>
    <string name="buttonDivide">/</string>
    <string name="buttonToggleSign">+/-</string>
    <string name="buttonDecimalPoint">.</string>
    <string name="buttonEquals">=</string>
    <string name="buttonClear">C</string>
    <string name="buttonSquareRoot">√</string>
    <string name="buttonSquared">x²</string>
    <string name="buttonInvert">1/x</string>
    <string name="buttonBackspace">del</string>
    <string name="buttonA">A</string>
    <string name="buttonB">B</string>
    <string name="buttonC">C</string>
    <string name="buttonD">D</string>
    <string name="buttonE">E</string>
    <string name="buttonF">F</string>
    <string name="buttonPercent">%</string>
    <string name="radiobuttonHex">Hex</string>
    <string name="radiobuttonDez">Dez</string>
    <string name="radiobuttonOkt">Okt</string>
    <string name="radiobuttonBin">Bin</string>
    <string name="title_activity_advanced">Advanced</string>
    <string name="not">NOT</string>
    <string name="and">AND</string>
    <string name="or">OR</string>
    <string name="xor">XOR</string>
    <string name="normal">Normal</string>
    <string name="menu_about">About</string>
    <string name="about">Diese App wurde von \n Hui Chin \n zu Testzwecken entwickelt.</string>
    <string name="title_about">About</string>

    <string name="hello_world">Hello world!</string>


</resources>