<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">


    <item
        android:id="@+id/menuLayoutSimple"
        android:orderInCategory="200"
        android:title="@string/menu_simple"
        app:showAsAction="never">

    </item>
    <item
        android:id="@+id/menuLayoutAdvanced"
        android:orderInCategory="300"
        android:title="@string/menu_advanced"
        app:showAsAction="never">

    </item>
    <item
        android:id="@+id/menuDocumentation"
        android:orderInCategory="400"
        android:title="@string/menu_docu"
        app:showAsAction="never">

    </item>
    <item
        android:id="@+id/menuAbout"
        android:orderInCategory="500"
        android:title="@string/menu_about"
        app:showAsAction="never">

    </item>
</menu>
